[gd_scene load_steps=2 format=3 uid="uid://dxvn8yqxqxqx"]

[ext_resource type="Script" path="res://scenes/ui/SaveSelectionMenu.gd" id="1_0x0x0"]

[node name="SaveSelectionMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_0x0x0")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.7)

[node name="MenuPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0

[node name="Title" type="Label" parent="MenuPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 20.0
offset_right = 50.0
offset_bottom = 50.0
text = "Load Game"
horizontal_alignment = 1

[node name="SaveList" type="ScrollContainer" parent="MenuPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 60.0
offset_right = -20.0
offset_bottom = -60.0

[node name="SaveListContainer" type="VBoxContainer" parent="MenuPanel/SaveList"]
layout_mode = 2

[node name="NoSavesLabel" type="Label" parent="MenuPanel/SaveList/SaveListContainer"]
layout_mode = 2
text = "No save files found"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="MenuPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -40.0
offset_right = 100.0
offset_bottom = -10.0

[node name="BackButton" type="Button" parent="MenuPanel/ButtonContainer"]
layout_mode = 2
text = "Back" 